# geojson2masks

./: .gitignore  README.md  pyproject.toml
src/geojson2masks/: cli.py  parser.py
src/segmentation_mask_maker/: __init__.py  rasterizer.py
tests/: __init__.py  conftest.py  test_cli.py  test_parser.py  test_rasterizer.py
